--- a/my-app/angular.json
+++ b/my-app/angular.json
@@ -27,6 +27,7 @@
               }
             ],
             "styles": [
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
 
             ],
@@ -95,6 +96,9 @@
     }
   },
   "cli": {
-    "analytics": "7ce55ce8-8f02-4eee-8062-2c6fada88349"
+    "analytics": "7ce55ce8-8f02-4eee-8062-2c6fada88349",
+    "cache": {
+      "enabled": false
+    }
   }
 }
