--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "my-app": "file:",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
