--- a/Garbage/File-Compress/package.json
+++ b/Garbage/File-Compress/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "nodejs_connection",
+  "name": "file-compress",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "file-compress": "file:",
     "joi": "^17.13.3",
-    "mongoose": "^8.9.5",
-    "nodejs_connection": "file:"
+    "mongoose": "^8.9.6",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.9",
+    "pdf-compressor": "^1.0.5"
   }
 }
